--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build && nodemon dist/server.js",
     "build": "babel src -d dist",
-    "serve": "node dist/server.js",
+    "serve": "npm run build && node dist/server.js",
     "test": "mocha --require babel-register"
   },
   "keywords": [
